--- a/Lab_2/examples/LU_factorization.ipynb
+++ b/Lab_2/examples/LU_factorization.ipynb
@@ -7,6 +7,69 @@
    "source": [
     "A file for example usages of LU factorization algorithm."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4a1859ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5x5 Matrix: adds = 663, muls = 178\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module Lab_2.\n",
+      "WARNING: replacing module strassen_padded.\n",
+      "WARNING: using LU_factorization.LU_factor in module Main conflicts with an existing identifier.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0 0.0 0.0 0.0 0.0; 0.12 1.0 0.0 0.0 0.0; 0.08000000000000002 0.07000000000000002 1.0 0.0 0.0; 0.03 0.04000000000000005 0.049999999999999996 1.0 0.0; 0.020000000000000004 0.009999999999999998 0.03 0.059999999999999984 1.0]\n",
+      "[0.7 0.12 0.08000000000000002 0.05 0.029999999999999995; 0.0 0.65 0.1 0.03999999999999998 0.02; 0.0 0.0 0.6 0.09 0.009999999999999998; 0.0 0.0 0.0 0.5500000000000002 0.05; 0.0 0.0 0.0 0.0 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "include(joinpath(@__DIR__, \"..\", \"src\", \"Lab_2.jl\"))\n",
+    "include(joinpath(@__DIR__, \"..\", \"lib\", \"strassen_padded.jl\"))\n",
+    "\n",
+    "using Test\n",
+    "using .Lab_2.LU_factorization\n",
+    "using .strassen_padded\n",
+    "\n",
+    "L5_true = [1.0 0.0 0.0 0.0 0.0;\n",
+    "            0.12 1.0 0.0 0.0 0.0;\n",
+    "            0.08 0.07 1.0 0.0 0.0;\n",
+    "            0.03 0.04 0.05 1.0 0.0;\n",
+    "            0.02 0.01 0.03 0.06 1.0]\n",
+    "\n",
+    "U5_true = [0.7 0.12 0.08 0.05 0.03;\n",
+    "            0.0 0.65 0.1 0.04 0.02;\n",
+    "            0.0 0.0 0.6 0.09 0.01;\n",
+    "            0.0 0.0 0.0 0.55 0.05;\n",
+    "            0.0 0.0 0.0 0.0 0.5]\n",
+    "            \n",
+    "A5 = L5_true * U5_true\n",
+    "\n",
+    "L5, U5, adds, muls = LU_factor(A5, strassen_pad)\n",
+    "\n",
+    "println(\"5x5 Matrix: adds = $adds, muls = $muls\")\n",
+    "@test isapprox(L5, L5_true, atol=1e-12, rtol=1e-12)\n",
+    "@test isapprox(U5, U5_true, atol=1e-12, rtol=1e-12)\n",
+    "@test isa(adds, Integer) && isa(muls, Integer)\n",
+    "println(L5)\n",
+    "println(U5)"
+   ]
   }
  ],
  "metadata": {
