some code organization, ipynb notebooks updated

--- a/Lab_2/examples/LU_factorization.ipynb
+++ b/Lab_2/examples/LU_factorization.ipynb
@@ -10,32 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4a1859ff",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5x5 Matrix: adds = 663, muls = 178\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "WARNING: replacing module Lab_2.\n",
       "WARNING: replacing module strassen_padded.\n",
-      "WARNING: using LU_factorization.LU_factor in module Main conflicts with an existing identifier.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.0 0.0 0.0 0.0 0.0; 0.12 1.0 0.0 0.0 0.0; 0.08000000000000002 0.07000000000000002 1.0 0.0 0.0; 0.03 0.04000000000000005 0.049999999999999996 1.0 0.0; 0.020000000000000004 0.009999999999999998 0.03 0.059999999999999984 1.0]\n",
-      "[0.7 0.12 0.08000000000000002 0.05 0.029999999999999995; 0.0 0.65 0.1 0.03999999999999998 0.02; 0.0 0.0 0.6 0.09 0.009999999999999998; 0.0 0.0 0.0 0.5500000000000002 0.05; 0.0 0.0 0.0 0.0 0.5]\n"
+      "WARNING: using LU_factorization.LU_factor in module Main conflicts with an existing identifier.\n",
+      "WARNING: using strassen_padded.strassen_pad in module Main conflicts with an existing identifier.\n"
      ]
     }
    ],
@@ -45,8 +31,28 @@
     "\n",
     "using Test\n",
     "using .Lab_2.LU_factorization\n",
-    "using .strassen_padded\n",
-    "\n",
+    "using .strassen_padded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7694fee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5x5 Matrix: adds = 663, muls = 178\n",
+      "5x5 Matrix Test Passed!\n",
+      "[1.0 0.0 0.0 0.0 0.0; 0.12 1.0 0.0 0.0 0.0; 0.08000000000000002 0.07000000000000002 1.0 0.0 0.0; 0.03 0.04000000000000005 0.049999999999999996 1.0 0.0; 0.020000000000000004 0.009999999999999998 0.03 0.059999999999999984 1.0]\n",
+      "\n",
+      "[0.7 0.12 0.08000000000000002 0.05 0.029999999999999995; 0.0 0.65 0.1 0.03999999999999998 0.02; 0.0 0.0 0.6 0.09 0.009999999999999998; 0.0 0.0 0.0 0.5500000000000002 0.05; 0.0 0.0 0.0 0.0 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
     "L5_true = [1.0 0.0 0.0 0.0 0.0;\n",
     "            0.12 1.0 0.0 0.0 0.0;\n",
     "            0.08 0.07 1.0 0.0 0.0;\n",
@@ -67,7 +73,8 @@
     "@test isapprox(L5, L5_true, atol=1e-12, rtol=1e-12)\n",
     "@test isapprox(U5, U5_true, atol=1e-12, rtol=1e-12)\n",
     "@test isa(adds, Integer) && isa(muls, Integer)\n",
-    "println(L5)\n",
+    "println(\"5x5 Matrix Test Passed!\")\n",
+    "println(L5, \"\\n\")\n",
     "println(U5)"
    ]
   }
