--- a/Lab_2/examples/matrix_multiplication.ipynb
+++ b/Lab_2/examples/matrix_multiplication.ipynb
@@ -7,6 +7,130 @@
    "source": [
     "A file for example usages of matrix multiplication algorithm."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff63c92e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module strassen_multiplication.\n",
+      "WARNING: replacing module strassen_padded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "include(joinpath(@__DIR__, \"..\", \"lib\", \"strassen_multiplication.jl\"))\n",
+    "include(joinpath(@__DIR__, \"..\", \"lib\", \"strassen_padded.jl\"))\n",
+    "using Test\n",
+    "using .strassen_multiplication\n",
+    "using .strassen_padded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dec53125",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Strassen multiplication without padding...\n",
+      "Addition operations: 198, Multiplication operations: 49\n",
+      "expected result:\n",
+      "[0.8413107620233381 1.7749561518510402 1.1016529439067626 1.559034309639138; 0.6003182111943715 0.9755274756949961 0.6968535342837507 0.5414410440911851; 1.1304953967493918 1.46270941396876 1.1203749405365573 1.0800345487715526; 0.7683252840315612 1.105672039432179 1.0437834176961036 0.7095066542446332]\n",
+      "Strassen result:\n",
+      "[0.8413107620233383 1.77495615185104 1.1016529439067622 1.5590343096391381; 0.6003182111943715 0.9755274756949968 0.6968535342837507 0.5414410440911852; 1.1304953967493918 1.46270941396876 1.1203749405365575 1.0800345487715528; 0.7683252840315612 1.1056720394321786 1.0437834176961036 0.7095066542446347]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = rand(4, 4)\n",
+    "B = rand(4, 4)\n",
+    "C_ref = A * B\n",
+    "println(\"Testing Strassen multiplication without padding...\")\n",
+    "C_strassen, add_count, mul_count = strassen(A, B)\n",
+    "@test isapprox(C_strassen, C_ref; atol=1e-10)\n",
+    "println(\"Addition operations: $add_count, Multiplication operations: $mul_count\")\n",
+    "println(\"expected result:\")\n",
+    "println(C_ref)\n",
+    "println(\"Strassen result:\")\n",
+    "println(C_strassen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0b13b7a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing Strassen multiplication with padding...\n",
+      "Addition operations: 1674, Multiplication operations: 343\n",
+      "expected result:\n",
+      "[0.8400792624407071 1.8153000158138264 0.9986068458599757 1.1236637867738581 1.1700730679514235; 0.502218973620367 1.5195244355748565 0.4943412530614326 1.1561187447108756 0.9399206679658402; 0.4068145085750082 0.8998939294997212 0.5048505244503675 0.5673183346198883 0.6062908125513089; 0.3059925500546567 0.6610493454019375 0.6774202385979028 0.6355744755364314 0.7936112278657137; 0.6221426396383454 1.3090744436122128 0.6986414610817214 0.7679270804737756 0.6858715364130786]\n",
+      "Strassen padded result:\n",
+      "[0.8400792624407082 1.8153000158138266 0.9986068458599758 1.1236637867738586 1.1700730679514235; 0.5022189736203674 1.5195244355748563 0.4943412530614326 1.1561187447108758 0.9399206679658403; 0.4068145085750087 0.8998939294997211 0.504850524450368 0.5673183346198888 0.606290812551309; 0.30599255005465675 0.6610493454019377 0.6774202385979028 0.6355744755364318 0.7936112278657136; 0.6221426396383452 1.3090744436122128 0.6986414610817215 0.7679270804737754 0.685871536413079]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = rand(5, 5)\n",
+    "B = rand(5, 5)\n",
+    "C_ref = A * B\n",
+    "println(\"\\nTesting Strassen multiplication with padding...\")\n",
+    "C, add_count_pad, mul_count_pad = strassen_pad(A, B)\n",
+    "@test isapprox(C, C_ref; atol=1e-10)\n",
+    "println(\"Addition operations: $add_count_pad, Multiplication operations: $mul_count_pad\")\n",
+    "println(\"expected result:\")\n",
+    "println(C_ref)\n",
+    "println(\"Strassen padded result:\")\n",
+    "println(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dc8b9881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing Strassen multiplication with padding for non square matrices...\n",
+      "Addition operations: 1674, Multiplication operations: 343\n",
+      "expected result:\n",
+      "[1.393616000554374 1.953629161151136 2.2807632378976184 1.8602106856381435 1.0028951228183667 1.4944473845658994 2.4578207214563004; 1.236098087600788 1.0839954279462853 1.5625207573798714 1.2885708797343465 0.8109761698539943 0.7519983826627162 1.613747735424022; 0.8338585861882573 1.4982887900273514 1.390960625493419 1.0352501517874708 0.46648450922743956 1.4133086391073666 1.6949708496342268; 1.6149917143609795 1.7947966590896627 2.2967118796777397 1.8408765472945239 1.0318421539025142 1.4277883295684306 2.5333478313474043]\n",
+      "Strassen padded result:\n",
+      "[1.3936160005543752 1.9536291611511358 2.2807632378976184 1.8602106856381435 1.002895122818368 1.4944473845658997 2.457820721456301; 1.2360980876007877 1.0839954279462864 1.5625207573798714 1.2885708797343478 0.810976169853994 0.7519983826627168 1.613747735424022; 0.8338585861882571 1.4982887900273514 1.3909606254934204 1.0352501517874715 0.4664845092274399 1.4133086391073668 1.6949708496342277; 1.6149917143609795 1.7947966590896625 2.2967118796777397 1.8408765472945259 1.0318421539025144 1.4277883295684308 2.5333478313474043]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = rand(4, 6)\n",
+    "B = rand(6, 7)\n",
+    "C_ref = A * B\n",
+    "println(\"\\nTesting Strassen multiplication with padding for non square matrices...\")\n",
+    "C, add_count_pad, mul_count_pad = strassen_pad(A, B)\n",
+    "@test isapprox(C, C_ref; atol=1e-10)\n",
+    "println(\"Addition operations: $add_count_pad, Multiplication operations: $mul_count_pad\")\n",
+    "println(\"expected result:\")\n",
+    "println(C_ref)\n",
+    "println(\"Strassen padded result:\")\n",
+    "println(C)"
+   ]
   }
  ],
  "metadata": {
