--- a/Lab_2/examples/LU_factorization.ipynb
+++ b/Lab_2/examples/LU_factorization.ipynb
@@ -13,18 +13,7 @@
    "execution_count": 2,
    "id": "4a1859ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module Lab_2.\n",
-      "WARNING: replacing module strassen_padded.\n",
-      "WARNING: using LU_factorization.LU_factor in module Main conflicts with an existing identifier.\n",
-      "WARNING: using strassen_padded.strassen_pad in module Main conflicts with an existing identifier.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "include(joinpath(@__DIR__, \"..\", \"src\", \"Lab_2.jl\"))\n",
     "include(joinpath(@__DIR__, \"..\", \"lib\", \"strassen_padded.jl\"))\n",
@@ -36,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7694fee2",
    "metadata": {},
    "outputs": [
@@ -48,7 +37,27 @@
       "5x5 Matrix Test Passed!\n",
       "[1.0 0.0 0.0 0.0 0.0; 0.12 1.0 0.0 0.0 0.0; 0.08000000000000002 0.07000000000000002 1.0 0.0 0.0; 0.03 0.04000000000000005 0.049999999999999996 1.0 0.0; 0.020000000000000004 0.009999999999999998 0.03 0.059999999999999984 1.0]\n",
       "\n",
-      "[0.7 0.12 0.08000000000000002 0.05 0.029999999999999995; 0.0 0.65 0.1 0.03999999999999998 0.02; 0.0 0.0 0.6 0.09 0.009999999999999998; 0.0 0.0 0.0 0.5500000000000002 0.05; 0.0 0.0 0.0 0.0 0.5]\n"
+      "[0.7 0.12 0.08000000000000002 0.05 0.029999999999999995; 0.0 0.65 0.1 0.03999999999999998 0.02; 0.0 0.0 0.6 0.09 0.009999999999999998; 0.0 0.0 0.0 0.5500000000000002 0.05; 0.0 0.0 0.0 0.0 0.5]\n",
+      "\n",
+      "---------------------------------\n",
+      "\n",
+      "matrix det:\n",
+      "0.5\n",
+      "expected det:\n"
+     ]
+    },
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: objects of type Float64 are not callable\nThe object of type `Float64` exists, but no method is defined for this combination of argument types when trying to treat it as a callable object.\nMaybe you forgot to use an operator such as *, ^, %, / etc. ?",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: objects of type Float64 are not callable\n",
+      "The object of type `Float64` exists, but no method is defined for this combination of argument types when trying to treat it as a callable object.\n",
+      "Maybe you forgot to use an operator such as *, ^, %, / etc. ?\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Desktop/STUDIA/Algorytmy Macierzowe/Algorytmy_Macierzowe/Lab_2/examples/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W2sZmlsZQ==.jl:33"
      ]
     }
    ],
@@ -75,8 +84,26 @@
     "@test isa(adds, Integer) && isa(muls, Integer)\n",
     "println(\"5x5 Matrix Test Passed!\")\n",
     "println(L5, \"\\n\")\n",
-    "println(U5)"
+    "println(U5)\n",
+    "\n",
+    "println(\"\\n---------------------------------\\n\")\n",
+    "println(\"matrix det:\")\n",
+    "det = 1\n",
+    "for i in size(L5, 1)\n",
+    "    det *= U5[i, i]\n",
+    "end\n",
+    "println(det)\n",
+    "println(\"expected det:\")\n",
+    "println(det(A5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95b0289",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
